--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "app_id" : "com.moodle.moodlemobile",
+    "app_id" : "com.msmf.msmfapp",
     "appname": "MSMF Mobile app",
     "desktopappname": "MSMF Desktop",
     "versioncode" : "2023",
