--- a/config.json
+++ b/config.json
@@ -11,8 +11,8 @@
     "wsextservice" : "local_mobile",
     "demo_sites": {"student": {"url": "https://103.24.127.199:8090/onlinecourses", "username": "student", "password": "moodle"}, "teacher": {"url": "https://103.24.127.199:8090/onlinecourses", "username": "teacher", "password": "moodle"}},
     "gcmpn": "694767596569",
-    "customurlscheme": "moodlemobile",
-    "siteurl": "https://103.24.127.199:8090/onlinecourses",
+    "customurlscheme": "MSMF mobile",
+    "presets" : {"url": "https://103.24.127.199:8090/onlinecourses"},
     "multisitesdisplay": "select",
     "skipssoconfirmation": "false",
     "forcedefaultlanguage": "false",
