--- a/config.json
+++ b/config.json
@@ -9,10 +9,10 @@
     "languages": {"ar": "عربي", "bg": "Български", "ca": "Català", "cs": "Čeština", "da": "Dansk", "de": "Deutsch", "de-du": "Deutsch - Du", "el": "Ελληνικά", "en": "English", "es": "Español", "es-mx": "Español - México", "eu": "Euskara", "fa": "فارسی", "fi": "Suomi", "fr" : "Français", "he" : "עברית", "hu": "magyar", "it": "Italiano", "ja": "日本語", "ko" : "한국어", "lt" : "Lietuvių", "mr": "मराठी", "nl": "Nederlands", "pl": "Polski", "pt-br": "Português - Brasil", "pt": "Português - Portugal", "ro": "Română", "ru": "Русский", "sr-cr": "Српски", "sr-lt": "Srpski", "sv": "Svenska", "tr" : "Türkçe", "uk" : "Українська", "zh-cn" : "简体中文", "zh-tw" : "正體中文"},
     "wsservice" : "moodle_mobile_app",
     "wsextservice" : "local_mobile",
-    "demo_sites": {"student": {"url": "https://103.24.127.199:8090/onlinecourses", "username": "student", "password": "moodle"}, "teacher": {"url": "https://103.24.127.199:8090/onlinecourses", "username": "teacher", "password": "moodle"}},
+    "presets" : {"url": "https://103.24.127.199:8090/onlinecourses"},
+    "demo_sites": [],
     "gcmpn": "694767596569",
     "customurlscheme": "MSMF mobile",
-    "presets" : {"url": "https://103.24.127.199:8090/onlinecourses"},
     "multisitesdisplay": "false",
     "skipssoconfirmation": "false",
     "forcedefaultlanguage": "false",
